--- a/presentation.tex
+++ b/presentation.tex
@@ -46,12 +46,12 @@
 
 
 \newcommand{\itemi}{\item[\checkmark]}
-\title{\normalsize{Исследование физических характеристик прототипа GEM детектора для системы измерения энергии коллайдера ВЭПП-4М}}
+\title{\normalsize{Исследование физических характеристик прототипа GEM детектора для <<Лазерного поляриметра>> коллайдера ВЭПП-4М}}
 \author{\small{
 \emph{Докладчик:}~Степан Алексеевич Захаров\\%
-\emph{Научные руководители:}~к.ф.-м.н.~Иван~Борисович~Николаев,}\\%
-д.ф.-м.н.~Лев~Исаевич~Шехтман}
-\date{\small{18.04.2019}}
+\emph{Научный руководитель:}~к.ф.-м.н.~Иван~Борисович~Николаев\\%
+\emph{Научный консультант:}~д.ф.-м.н.~Лев~Исаевич~Шехтман}}
+\date{\small{26.04.2019}}
 
 \tikzstyle{every picture}+=[remember picture]
 \tikzstyle{na} = [baseline=-.5ex]
@@ -62,7 +62,7 @@
 
 \begin{frame}
 	\frametitle{Комплекс ВЭПП-4М --- КЕДР}
-		\begin{minipage}[h]{0.49\linewidth}
+		\begin{minipage}[c]{0.49\linewidth}
 			\begin{center}
 			\includegraphics[width=1\linewidth]{VEPP-4.pdf}
 			\footnotesize{Коллайдер ВЭПП-4М}
@@ -195,32 +195,18 @@
 
 \begin{frame}[t]
 \frametitle{Прототип детектора}
-\vspace{0pt}
-\begin{columns}
-	\column{0.5\textwidth}
-	Технические особенности:
-	\begin{minipage}[t][1\textheight]{\linewidth}
-		\small{\begin{itemize}
-				\item двумерная считывающая структура $\Rightarrow$ однозначное определение координаты трека
-				\item 10 вычитывающих плат по 100-120 каналов в каждой $\Rightarrow$ одновременное вычитывание события
-				\item $N_{exp} \sim 10~\gamma /flash$
-				
-		\end{itemize}}
-	\end{minipage}%
-	\column{0.5\linewidth}
-	\begin{minipage}[t][1\textheight]{\linewidth}
-		\centering
-		\includegraphics[width=0.8\linewidth, height = 0.4\textheight]{GEM_model.pdf}
-		\newline \tiny{Принципиальная схема расположения основных элементов детектора}
-		\includegraphics[width=0.8\linewidth]{Polarimeter_readout_board.png} 
-		\newline \tiny{Плата со считывающей структурой}
-	\end{minipage}%
-\end{columns}
+		\begin{minipage}[c]{0.59\linewidth}
+			\centering
+			\includegraphics[width=1\linewidth]{GEM_prototype.png} 
+			\newline \tiny{Детектор в сборе}
+		\end{minipage}
+		\begin{minipage}[t]{0.39\linewidth}
+		\includegraphics[width=1\linewidth, height = 0.4\textheight]{GEM_model.pdf}
+		\tiny{Расположение электродов и считывающей структуры}
+		\includegraphics[width=1\linewidth]{Main_board.png} 
+		\newline \centering\tiny{Главная плата}
+		\end{minipage}	
 \end{frame}
-
-
-
-
 
 \begin{frame}[c]
 \frametitle{Определение уровня шумов детектора}
@@ -263,11 +249,26 @@
 	\begin{minipage}[t][1\textheight]{\linewidth}
 	\vspace*{30pt}
 	\includegraphics[width=1\linewidth]{Noise_time_drift.pdf}
-	\\ \centering \small{$\sigma_{n} \approx 15.3 Ch = 5660 e^{-}$}
+	\\ \centering \small{$\sigma_{n} \approx 15.4 Ch = 5700 e^{-}$}
 	\end{minipage}
 \end{columns}
 \end{frame}
 
+\begin{frame}[c]
+\frametitle{Возможное объяснение: температурный дрейф}
+\vspace{10pt}
+\begin{columns}
+	\column{0.5\textwidth}
+	\begin{minipage}[t][1\textheight]{\linewidth}
+		\centering\includegraphics[width=0.8\linewidth]{Thermal_image.jpg}
+		\newline \tiny{Автор фото: Василий Кудрявцев}
+	\end{minipage}%
+	\column{0.5\linewidth}
+	\begin{minipage}[t][1\textheight]{\linewidth}
+		\centering \includegraphics[width=0.5\linewidth]{Readout_board.png}
+	\end{minipage}
+\end{columns}
+\end{frame}
 
 \begin{frame}
 \frametitle{Механизм газового усиления}
@@ -279,7 +280,6 @@
 	\newline
 	\newline \footnotesize{Условие возникновения: $E_e \gtrsim W_I$}
 	\newline (Не путать $W_I$ c $I$)
-	
 \end{minipage}
 \end{frame}
 
@@ -290,14 +290,15 @@
 \column{0.5\textwidth}
 \begin{minipage}[t][1\textheight]{\linewidth}
 	\small{
-		Для всех типов детекторов:
+		\vspace*{30pt}
 		\begin{itemize}
 			\item Количество первичной ионизации: $n_{0} = \cfrac{\Delta E}{W_I}$
-			\item $n_{tot} = n_{0} e^{\alpha x} = n_{0}\color{red}{K}$
-			\item $\displaystyle n_{tr} = n_{tot} \epsilon$
+			\item $n_{tot} = n_{0} e^{\alpha x}$
+			\item $\displaystyle n_{tr} = n_{tot} \epsilon = n_{0}\color{red}{K}$
 		\end{itemize}
-		Для GEM прозрачность выражается как: 
-		$\epsilon = \cfrac{\pi d^2}{2\sqrt{3}p^2}\cfrac{E_{ext}}{E_{hole}}$}
+		Для GEM прозрачность можно определить как: 
+		$\epsilon = \cfrac{\pi d^2}{2\sqrt{3}p^2}\cfrac{E_{ext}}{E_{hole}}$
+	}
 \end{minipage}%
 \column{0.5\linewidth}
 \begin{minipage}[t][1\textheight]{\linewidth}
@@ -366,7 +367,7 @@
 	\begin{minipage}[t][1\textheight]{\linewidth}
 		\small{\begin{itemize}
 				\item Есть кадр со смещенным нулевым уровнем
-				\item 1-8 сигнальных/60
+				\item 1-8 сигнальных каналов/60
 				\item $\langle Q_{noise}\rangle \neq 0 $
 				\item \textbf{Проблема:} как при вычислении среднего не учитывать сигнальные события?
 		\end{itemize}}
@@ -383,17 +384,17 @@
 \end{frame}
 
 \begin{frame}[t]
-\frametitle{Идея медианного алгоритма для коррекции нулевого уровня}
+\frametitle{Коррекция нулевого уровня в кадре}
 \vspace{0pt}
 \begin{columns}
 	\column{0.5\textwidth}
 	\begin{minipage}[t][1\textheight]{\linewidth}
-		\small{\begin{itemize}
-				\item Есть кадр со смещенным нулевым уровнем
-				\item 1-8 сигнальных/60
-				\item $\langle Q_{noise}\rangle \neq 0 $
-				\item Проблема: как при вычислении среднего не учитывать сигнальные события?
-				\item \textbf{Решение:} медианный алгоритм
+		\vspace{30pt}
+		\small{
+		\textbf{Решение:} медианный алгоритм
+		\begin{itemize}
+				\item Нахождение медианного значения заряда по кадру
+				\item $Q(Ch) = Q_{0}(Ch)- median$
 		\end{itemize}}
 	\end{minipage}%
 	\column{0.5\linewidth}
@@ -422,7 +423,7 @@
 				\item $\Sigma Q_{sig}$ для кластера
 				\item Распределение по $Q_{sig}$
 				\item MPV $\rightarrow \langle Q_{sig} \rangle$
-				\item $\displaystyle K = \cfrac{\langle Q_{sig} \rangle}{Q_{0}}$
+				\item $\displaystyle K = \cfrac{\langle Q_{sig} \rangle}{n_{0}e^{-}}$
 		\end{itemize}}
 	\end{minipage}%
 	\column{0.5\linewidth}
@@ -460,9 +461,9 @@
 \frametitle{Заключение}
 \begin{itemize}
 	\item Разрабатывается прототип детектора для установки <<Лазерный поляриметр>>
-	\item Уже получены данные об уровне шумов: $\sigma_{n} \approx15.3~Ch$
+	\item Уже получены данные об уровне шумов: $\sigma_{n} \approx 5700 e^{-}$
 	\item и коэффициенте усиления GEM: $K_{max} \approx 52000$
-	\item \color{calmRed} {Необходимо исследование пространственного и временного разрешения на выведенном пучке}
+	\item \color{calmRed} {Необходимо исследование пространственного разрешения и эффективности регистрации на выведенном пучке}
 \end{itemize}
 \end{frame}
 \begin{frame}
@@ -478,12 +479,26 @@
 \end{center}
 \end{frame}
 
-\begin{frame}
-\frametitle{Backup: план выполнения работ}
-\begin{center}
-	\includegraphics[ width=0.9\linewidth]{schedule.png}
-\end{center}
+%\begin{frame}
+%\frametitle{Backup: план выполнения работ}
+%\begin{center}
+%	\includegraphics[ width=0.9\linewidth]{schedule.png}
+%\end{center}
+%\end{frame}
+\begin{frame}[t]
+\frametitle{Backup: Потери энергии в детекторе}
+Для $2.2~\MeV~e^{-}$:
+\newline
+\newline $\kappa = \cfrac{dE/dx_{rad}}{dE/dx_{ion}}= \cfrac{ Z E[\MeV] }{600}.$
+\newline 
+\newline Используем Ar: $E_{crit} = 33.3~\MeV > 2.2 \MeV~\Rightarrow$ потери ионизационные.
+\newline
+\newline $X_0(Ar)=117$м,
+\newline
+\newline $\cfrac{dE}{dx} = \cfrac{2\pi N_0 e^4 Z\rho}{m_e c^2 \beta^2 A}\biggl[ln\cfrac{ m_ec^2E}{I^2}\cfrac{\beta^2}{2(1-\beta^2)} + f_{corr}(\beta)\biggr]$
+
 \end{frame}
+
 \begin{frame}[t]
 \frametitle{Backup: Влияние медианного алгоритма}
 \vspace*{10pt}
