--- a/presentation.tex
+++ b/presentation.tex
@@ -153,7 +153,7 @@
 		\includegraphics[width=1\linewidth]{GEM_microphoto.png}
 	\end{minipage}
 	\begin{minipage}[h]{0.49\linewidth}
-		\includegraphics[width=1\linewidth]{GEM_crossec.png}
+		\includegraphics[width=1\linewidth]{GEM_crossec.jpg}
 	\end{minipage}
 	\tiny{Рисунки из статьи: F. Sauli, The gas electron multiplier (GEM): Operating principles and applications, 2016}
 	
@@ -197,13 +197,13 @@
 \frametitle{Прототип детектора}
 		\begin{minipage}[c]{0.59\linewidth}
 			\centering
-			\includegraphics[width=1\linewidth]{GEM_prototype.png} 
+			\includegraphics[width=1\linewidth]{GEM_prototype.jpg} 
 			\newline \tiny{Детектор в сборе}
 		\end{minipage}
 		\begin{minipage}[t]{0.39\linewidth}
 		\includegraphics[width=1\linewidth, height = 0.4\textheight]{GEM_model.pdf}
 		\tiny{Расположение электродов и считывающей структуры}
-		\includegraphics[width=1\linewidth]{Main_board.png} 
+		\includegraphics[width=1\linewidth]{Main_board.jpg} 
 		\newline \centering\tiny{Главная плата}
 		\end{minipage}	
 \end{frame}
@@ -265,7 +265,7 @@
 	\end{minipage}%
 	\column{0.5\linewidth}
 	\begin{minipage}[t][1\textheight]{\linewidth}
-		\centering \includegraphics[width=0.5\linewidth]{Readout_board.png}
+		\centering \includegraphics[width=0.5\linewidth]{Readout_board.jpg}
 	\end{minipage}
 \end{columns}
 \end{frame}
