--- a/presentation.tex
+++ b/presentation.tex
@@ -33,13 +33,13 @@
   \leavevmode%
   \hbox{%
   \begin{beamercolorbox}[wd=.333333\paperwidth,ht=2.25ex,dp=1ex,center]{}%
-   Степан Захаров
+   Степан Захаров, 4 курс ФФ НГУ
   \end{beamercolorbox}%
   \begin{beamercolorbox}[wd=.333333\paperwidth,ht=2.25ex,dp=1ex,center]{}%
     Новосибирск, 2019
   \end{beamercolorbox}%
   \begin{beamercolorbox}[wd=.333333\paperwidth,ht=2.25ex,dp=1ex,right]{}%
-  Слайд. \insertframenumber{} из \inserttotalframenumber \hspace*{2ex}
+  Слайд \insertframenumber{} из \inserttotalframenumber \hspace*{2ex}
   \end{beamercolorbox}}%
   \vskip0pt%
 }
